# nbprune

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.py
examples/: Makefile  example2-nb.py  example3-nb.md
examples/.solutions/: example2.nb.py
examples/.teacher/: example1-corrige.nb.py  example2-corrige-nb.py  example3-corrige-nb.md
nbprune/: nbprune.py  version.py
